--- a/sample/templates/index.html
+++ b/sample/templates/index.html
@@ -2,8 +2,39 @@
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         {% block stylesheet %}{% endblock %}
+        <style>body { font-size: 14px; }</style>
     </head>
     <body>
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #22541d;">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('no_validator') }}">Vanilla</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="yaireoDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  YairEO
+                </a>
+                <div class="dropdown-menu" aria-labelledby="yaireoDropdownMenuLink">
+                    <a class="dropdown-item" href="{{ url_for('yaireo') }}">Regex e-mail/URL validators (default)</a>
+                    <a class="dropdown-item" href="{{ url_for('yaireo_builtin') }}">Built-in e-mail/URL validators</a>
+                </div>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="parsleyDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  ParsleyJS
+                </a>
+                <div class="dropdown-menu" aria-labelledby="parsleyDropdownMenuLink">
+                    <a class="dropdown-item" href="{{ url_for('parsley_regex') }}">Regex e-mail/URL validators</a>
+                    <a class="dropdown-item" href="{{ url_for('parsley_builtin') }}">Built-in e-mail/URL validators (default)</a>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </nav>
         <div class="row d-flex justify-content-center">
             <div class="m-5 col-md-10">
                 <div class="container">
@@ -25,6 +56,8 @@
             </div>
         </div>
 
+        <script src="{{ url_for('static', filename='js/jquery-3.5.0.js') }}"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         {% if log %}
             <script>
                 console.log({{ log | safe }});
