--- a/sample/templates/yaireo.html
+++ b/sample/templates/yaireo.html
@@ -2,7 +2,7 @@
 
 {% block stylesheet %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/yaireo.css') }}">
-<style>.alert { height: 2rem; } label { text-transform: none;}</style>
+<style>.alert { height: 2rem; } label { text-transform: none;} .field label > span:first-child { width: 30%; }</style>
 {% endblock %}
 
 {% block form %}
@@ -12,7 +12,7 @@
         <fieldset>
             {% for field in form if field != form.csrf_token %}
 	    <div class="row">
-                <div class="field mt-3" style="display: inline-flex;">
+                <div class="field mt-3" style="display: inline-flex; width: 100%;">
                     <label style="width: 100%;">
                         <span>{{ field.label }}</span>
                         {{ field(size=20) }}
