--- a/sample/templates/index.html
+++ b/sample/templates/index.html
@@ -32,6 +32,15 @@
                     <a class="dropdown-item" href="{{ url_for('parsley_builtin') }}">Built-in e-mail/URL validators (default)</a>
                 </div>
               </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="bouncerDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                 Bouncer.js 
+                </a>
+                <div class="dropdown-menu" aria-labelledby="bouncerDropdownMenuLink">
+                    <a class="dropdown-item" href="{{ url_for('bouncer') }}">Regex e-mail/URL validators (default)</a>
+                    <a class="dropdown-item" href="{{ url_for('bouncer_builtin') }}">Built-in e-mail/URL validators</a>
+                </div>
+              </li>
             </ul>
           </div>
         </nav>
