Add support for error messages

--- a/sample/templates/parsley.html
+++ b/sample/templates/parsley.html
@@ -2,7 +2,7 @@
 
 {% block stylesheet %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/yaireo.css') }}">
-<style>.alert { height: 2rem; } label { text-transform: none;}</style>
+<style>.alert { height: 2rem; } label { text-transform: none;} .parsley-custom-error-message { white-space: pre-line; }</style>
 {% endblock %}
 
 {% block form %}
