--- a/sample/templates/yaireo.html
+++ b/sample/templates/yaireo.html
@@ -30,6 +30,14 @@
     <script src="{{ url_for('static', filename='js/yaireo.js') }}"></script>
     <script>
         var validator = new FormValidator({"events" : ['blur']}, document.forms[0]);
+        {% if yaireo_errors %}
+            let yaireo_errors = {{ yaireo_errors | safe }};
+            validator.texts = {
+                ...validator.texts,
+                ...{'invalid': 'input is not as expected'},
+                ...yaireo_errors
+            }
+        {% endif %}
 
         document.forms[0].onsubmit = function(e){
             var submit = true,
