--- a/sample/templates/bouncer.html
+++ b/sample/templates/bouncer.html
@@ -2,7 +2,7 @@
 
 {% block stylesheet %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/yaireo.css') }}">
-<style>.alert { height: 2rem; } label { text-transform: none;}</style>
+<style>.alert { height: 2rem; } #num_range, #num_range_2 { width: 180px;} .error-message { white-space: pre-line; }</style>
 {% endblock %}
 
 {% block form %}
